--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,9 @@ inputs:
   aws_region:
     description: The AWS region where to search the resource.
     required: true
+  working-directory:
+    required: true
+    description: wd
 
 runs:
   using: "composite"
@@ -18,8 +21,7 @@ runs:
     - name: Get the resource
       id: resource
       run: |
-        echo $PWD
-        cat > backend.tf << EOF
+        cat > ${{inputs.working-directory}/backend.tf << EOF
           terraform {
             backend "s3" {
               bucket         = "${{inputs.backend_bucket}}"
